--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="row">
             <div class="col-6">
                 <div class="form-group">
-                     <label for="exampleInputname"><strong>Name</strong></label>
+                     <label for="exampleInputname"><strong>First Name</strong></label>
                      <input type="text" class="form-control" id="exampleInputname" aria-describedby="nameHelp">
                 </div>
             </div>
@@ -64,7 +64,7 @@
         <div class="row">
             <div class="col-6">
                 <div class="form-group">
-                     <label for="exampleInputcity"><strong>Postal Code</strong></label>
+                     <label for="exampleInputcity"><strong>City</strong></label>
                      <input type="text" class="form-control" id="exampleInputcity" aria-describedby="cityHelp" >
                 </div>
             </div>
