--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <form> 
-    <div class="container"> 
+<div class="container"> 
         <div class="clearfix">
         <h1 class="alert alert-secondary">Payments Form example</h1>
     <div class="alert alert-danger" role="alert">
@@ -37,10 +37,15 @@
       <div class="valid-tooltip"> </div>
       </div>
    
-
-    <div class="col-4">
+  <div class="col-6">
+      <label for="validationTooltip02">First Name</label>
+      <input type="text" class="form-control" id="validationTooltip02" placeholder="First Name" value="name" required>
+      <div class="valid-tooltip">looks good!
+      </div>
+    </div>
+    <div class="col-6">
       <label for="validationTooltip02">Last name</label>
-      <input type="text" class="form-control" id="validationTooltip02" placeholder="Last name" value="Otto" required>
+      <input type="text" class="form-control" id="validationTooltip02" placeholder="Last name" value="lastname" required>
       <div class="valid-tooltip">looks good!
       </div>
     </div>
@@ -66,16 +71,29 @@
         Please provide a valid zip.
       </div>
     </div>
+
+    <div class="col-2">
+
+
+    </div>
+
+<div class=" col-10">
+      <div class="form-group">
+    <label for="exampleFormControlTextarea1">Example textarea</label>
+    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
   </div>
   </div>
 
+<div class=" col-12 bg-light">
+<button type="button" class="btn btn-primary pull-right"> Cancel</button>
+  <button type="buttun" class="btn btn-primary pull-right">Send</button> 
+  </div>
 
-<button type="submit" class="btn btn-primary">Cancel</button>
-  <button type="submit" class="btn btn-primary">Send</button>
+  </div>
+</div>
+
 </form>
+
 </body>
-<script type="text/javascript" src="app.js">
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+<script type="text/javascript" src="app.js"></script>
 </html>
